Added and removed some files.

--- a/Websites/Curvaceous Homepage/index.html
+++ b/Websites/Curvaceous Homepage/index.html
@@ -10,11 +10,13 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Testing</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+
+    <script src="https://cdn.jsdelivr.net/npm/kute.js@2.0.0/kute.min.js"></script>
 
     <style>
         body {
@@ -34,15 +36,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
             align-items: center;
             min-height: 400px;
             padding-top: 100px;
-        }
-
-        .wave {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            overflow: hidden;
-            line-height: 0;
         }
 
         .slate-grey {
@@ -102,6 +95,8 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
     </style>
 </head>
 
+<!-- SVG paths von 2 Wellen Morph Path 1.1 mit Path 1.2 -->
+  
 <body>
     <section class="slate-grey">
         <h1>Nice Curves</h1>
@@ -172,7 +167,7 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
             beatae rem doloribus. Quis tempore cupiditate libero atque commodi ducimus neque illo sint debitis aliquid.
         </p>
     </section>
-    
+
 </body>
 
 </html>
