--- a/Websites/Curvaceous Homepage/index.html
+++ b/Websites/Curvaceous Homepage/index.html
@@ -128,7 +128,7 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 { path: '#wave111' },
                 { path: '#wave121' },
                 {
-                    repeat: 999, duration: 18000
+                    repeat: 999, duration: 10000
                     , yoyo: true
                 }
             ).start();
@@ -137,28 +137,28 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 "#wave112",
                 { path: '#wave112' },
                 { path: '#wave122' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween3 = KUTE.fromTo(
                 "#wave113",
                 { path: '#wave113' },
                 { path: '#wave123' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween4 = KUTE.fromTo(
                 "#wave114",
                 { path: '#wave114' },
                 { path: '#wave124' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween5 = KUTE.fromTo(
                 "#wave115",
                 { path: '#wave115' },
                 { path: '#wave125' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
         </script>
 
@@ -215,7 +215,7 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 { path: '#wave211' },
                 { path: '#wave221' },
                 {
-                    repeat: 999, duration: 18000
+                    repeat: 999, duration: 10000
                     , yoyo: true
                 }
             ).start();
@@ -224,28 +224,28 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 "#wave212",
                 { path: '#wave212' },
                 { path: '#wave222' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween8 = KUTE.fromTo(
                 "#wave213",
                 { path: '#wave213' },
                 { path: '#wave223' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween9 = KUTE.fromTo(
                 "#wave214",
                 { path: '#wave214' },
                 { path: '#wave224' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween10 = KUTE.fromTo(
                 "#wave215",
                 { path: '#wave215' },
                 { path: '#wave225' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
         </script>
 
@@ -302,7 +302,7 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 { path: '#wave311' },
                 { path: '#wave321' },
                 {
-                    repeat: 999, duration: 18000
+                    repeat: 999, duration: 10000
                     , yoyo: true
                 }
             ).start();
@@ -311,28 +311,28 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 "#wave312",
                 { path: '#wave312' },
                 { path: '#wave322' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween13 = KUTE.fromTo(
                 "#wave313",
                 { path: '#wave313' },
                 { path: '#wave323' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween14 = KUTE.fromTo(
                 "#wave314",
                 { path: '#wave314' },
                 { path: '#wave324' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween15 = KUTE.fromTo(
                 "#wave315",
                 { path: '#wave315' },
                 { path: '#wave325' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
         </script>
 
@@ -389,7 +389,7 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 { path: '#wave411' },
                 { path: '#wave421' },
                 {
-                    repeat: 999, duration: 18000
+                    repeat: 999, duration: 10000
                     , yoyo: true
                 }
             ).start();
@@ -398,28 +398,28 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 "#wave412",
                 { path: '#wave412' },
                 { path: '#wave422' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween18 = KUTE.fromTo(
                 "#wave413",
                 { path: '#wave413' },
                 { path: '#wave423' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween19 = KUTE.fromTo(
                 "#wave414",
                 { path: '#wave414' },
                 { path: '#wave424' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween20 = KUTE.fromTo(
                 "#wave415",
                 { path: '#wave415' },
                 { path: '#wave425' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
         </script>
 
@@ -477,7 +477,7 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 { path: '#wave511' },
                 { path: '#wave521' },
                 {
-                    repeat: 999, duration: 18000
+                    repeat: 999, duration: 10000
                     , yoyo: true
                 }
             ).start();
@@ -486,28 +486,28 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 "#wave512",
                 { path: '#wave512' },
                 { path: '#wave522' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween23 = KUTE.fromTo(
                 "#wave513",
                 { path: '#wave513' },
                 { path: '#wave523' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween24 = KUTE.fromTo(
                 "#wave514",
                 { path: '#wave514' },
                 { path: '#wave524' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween25 = KUTE.fromTo(
                 "#wave515",
                 { path: '#wave515' },
                 { path: '#wave525' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
         </script>
 
@@ -565,7 +565,7 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 { path: '#wave611' },
                 { path: '#wave621' },
                 {
-                    repeat: 999, duration: 18000
+                    repeat: 999, duration: 10000
                     , yoyo: true
                 }
             ).start();
@@ -574,28 +574,28 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 "#wave612",
                 { path: '#wave612' },
                 { path: '#wave622' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween28 = KUTE.fromTo(
                 "#wave613",
                 { path: '#wave613' },
                 { path: '#wave623' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween29 = KUTE.fromTo(
                 "#wave614",
                 { path: '#wave614' },
                 { path: '#wave624' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween30 = KUTE.fromTo(
                 "#wave615",
                 { path: '#wave615' },
                 { path: '#wave625' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
         </script>
 
@@ -608,7 +608,7 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
             blanditiis commodi ullam?</p>
     </section>
 
-    <div class="bottom-overlap">
+    <!-- <div class="bottom-overlap">
         <svg transform=scale(1.1) height: 960 width: 100% viewBox="0 0 960 100">
             <g>
                 <path id="wave711"
@@ -652,7 +652,7 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 { path: '#wave711' },
                 { path: '#wave721' },
                 {
-                    repeat: 999, duration: 18000
+                    repeat: 999, duration: 10000
                     , yoyo: true
                 }
             ).start();
@@ -661,28 +661,28 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 "#wave712",
                 { path: '#wave712' },
                 { path: '#wave722' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween33 = KUTE.fromTo(
                 "#wave713",
                 { path: '#wave713' },
                 { path: '#wave723' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween34 = KUTE.fromTo(
                 "#wave714",
                 { path: '#wave714' },
                 { path: '#wave724' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
 
             const tween35 = KUTE.fromTo(
                 "#wave715",
                 { path: '#wave715' },
                 { path: '#wave725' },
-                { repeat: 999, duration: 18000, yoyo: true }
+                { repeat: 999, duration: 10000, yoyo: true }
             ).start();
         </script>
     </div>
@@ -692,7 +692,7 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
         <p>Totam repellat excepturi blanditiis quo laboriosam quidem distinctio in at nostrum omnis, aut vel sapiente
             beatae rem doloribus. Quis tempore cupiditate libero atque commodi ducimus neque illo sint debitis aliquid.
         </p>
-    </section>
+    </section> -->
 
 </body>
 
