--- a/Websites/Curvaceous Homepage/index.html
+++ b/Websites/Curvaceous Homepage/index.html
@@ -16,74 +16,39 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="style.css">
+
     <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
-
-    <style>
-        body {
-            margin: 0;
-            font-family: "Roboto", sans-serif;
-            font-weight: 100;
-            font-style: normal;
-            color: #DEFFFC;
-            background: #070617;
-        }
-
-        section {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 400px;
-            padding-top: 100px;
-        }
-
-        .slate-grey {
-            background: #767b91;
-            color: #DEFFFC;
-        }
-
-        .peach {
-            background: #F7C59F;
-            color: #070617;
-        }
-
-        .fire-engine-red {
-            background: #D62828;
-
-        }
-
-        .mint-green {
-            background: #DEFFFC;
-            color: #070617;
-        }
-
-        .top-overlap {
-            position: relative;
-            bottom: -5px;
-            z-index: -1;
-            border: none !important;
-        }
-
-        .bottom-overlap {
-            position: relative;
-            z-index: -1;
-            top: -5px;
-            border: none !important;
-        }
-    </style>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 
 </head>
 
 <!-- SVG paths von 2 Wellen Morph Path 1.1 mit Path 1.2 -->
 
 <body>
-    <section class="slate-grey">
+    <header>
+        <nav class="navbar">
+            <span class="top"></span>
+            <span class="bottom"></span>
+            <div class="logo">julian pietracz.</div>
+            <ul class="menu">
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+            <div class="instagram">
+                <a href="#">instagram</a>
+            </div>
+        </nav>
+    </header>
+
+    <!-- <section class="slate-grey">
         <h1>Nice Curves</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quas rerum qui facere soluta atque voluptatem
             pariatur fuga totam ratione! Assumenda sit aut quibusdam quos natus! Praesentium quam laborum reprehenderit.
         </p>
-    </section>
-
+    </section> -->
+    <div class="slate-grey spacer"></div>
     <div class="bottom-overlap">
         <svg transform=scale(1.1) width: 100% viewBox="0 0 960 100">
             <g>
@@ -121,7 +86,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                     fill="#767b91"></path>
             </g>
         </svg>
-
         <script>
             const tween1 = KUTE.fromTo(
                 "#wave111",
@@ -161,7 +125,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 { repeat: 999, duration: 10000, yoyo: true }
             ).start();
         </script>
-
     </div>
 
     <section>
@@ -172,7 +135,7 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
     </section>
 
     <div class="top-overlap">
-        <svg class="top-overlap" transform=scale(1.1) height: 960 width: 100% viewBox="0 0 960 100">
+        <svg transform=scale(1.1) height: 960 width: 100% viewBox="0 0 960 100">
             <g>
                 <path id="wave211"
                     d="M0 38L13.3 37.2C26.7 36.3 53.3 34.7 80 34.2C106.7 33.7 133.3 34.3 160 34.8C186.7 35.3 213.3 35.7 240 31.7C266.7 27.7 293.3 19.3 320 18.7C346.7 18 373.3 25 400 30.7C426.7 36.3 453.3 40.7 480 41.2C506.7 41.7 533.3 38.3 560 33C586.7 27.7 613.3 20.3 640 19.5C666.7 18.7 693.3 24.3 720 26.5C746.7 28.7 773.3 27.3 800 28.8C826.7 30.3 853.3 34.7 880 34.5C906.7 34.3 933.3 29.7 946.7 27.3L960 25L960 101L946.7 101C933.3 101 906.7 101 880 101C853.3 101 826.7 101 800 101C773.3 101 746.7 101 720 101C693.3 101 666.7 101 640 101C613.3 101 586.7 101 560 101C533.3 101 506.7 101 480 101C453.3 101 426.7 101 400 101C373.3 101 346.7 101 320 101C293.3 101 266.7 101 240 101C213.3 101 186.7 101 160 101C133.3 101 106.7 101 80 101C53.3 101 26.7 101 13.3 101L0 101Z"
@@ -208,7 +171,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                     fill="#f7c59f"></path>
             </g>
         </svg>
-
         <script>
             const tween6 = KUTE.fromTo(
                 "#wave211",
@@ -248,7 +210,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 { repeat: 999, duration: 10000, yoyo: true }
             ).start();
         </script>
-
     </div>
 
     <section class="peach">
@@ -295,7 +256,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                     fill="#f7c59f"></path>
             </g>
         </svg>
-
         <script>
             const tween11 = KUTE.fromTo(
                 "#wave311",
@@ -335,7 +295,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 { repeat: 999, duration: 10000, yoyo: true }
             ).start();
         </script>
-
     </div>
 
     <section>
@@ -382,7 +341,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                     fill="#d62828"></path>
             </g>
         </svg>
-
         <script>
             const tween16 = KUTE.fromTo(
                 "#wave411",
@@ -422,7 +380,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 { repeat: 999, duration: 10000, yoyo: true }
             ).start();
         </script>
-
     </div>
 
     <section class="fire-engine-red">
@@ -451,7 +408,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                     d="M0 15L13.3 15.7C26.7 16.3 53.3 17.7 80 16.7C106.7 15.7 133.3 12.3 160 10.2C186.7 8 213.3 7 240 7.7C266.7 8.3 293.3 10.7 320 13.8C346.7 17 373.3 21 400 23.2C426.7 25.3 453.3 25.7 480 23C506.7 20.3 533.3 14.7 560 13.8C586.7 13 613.3 17 640 19C666.7 21 693.3 21 720 20.5C746.7 20 773.3 19 800 17.2C826.7 15.3 853.3 12.7 880 12C906.7 11.3 933.3 12.7 946.7 13.3L960 14L960 0L946.7 0C933.3 0 906.7 0 880 0C853.3 0 826.7 0 800 0C773.3 0 746.7 0 720 0C693.3 0 666.7 0 640 0C613.3 0 586.7 0 560 0C533.3 0 506.7 0 480 0C453.3 0 426.7 0 400 0C373.3 0 346.7 0 320 0C293.3 0 266.7 0 240 0C213.3 0 186.7 0 160 0C133.3 0 106.7 0 80 0C53.3 0 26.7 0 13.3 0L0 0Z"
                     fill="#d62828"></path>
             </g>
-
             <g style="visibility: hidden;">
                 <path id="wave521"
                     d="M0 49L13.3 52.2C26.7 55.3 53.3 61.7 80 62.5C106.7 63.3 133.3 58.7 160 58.2C186.7 57.7 213.3 61.3 240 60.8C266.7 60.3 293.3 55.7 320 59.5C346.7 63.3 373.3 75.7 400 75.5C426.7 75.3 453.3 62.7 480 56.3C506.7 50 533.3 50 560 53.3C586.7 56.7 613.3 63.3 640 67.5C666.7 71.7 693.3 73.3 720 74C746.7 74.7 773.3 74.3 800 70.8C826.7 67.3 853.3 60.7 880 62.5C906.7 64.3 933.3 74.7 946.7 79.8L960 85L960 0L946.7 0C933.3 0 906.7 0 880 0C853.3 0 826.7 0 800 0C773.3 0 746.7 0 720 0C693.3 0 666.7 0 640 0C613.3 0 586.7 0 560 0C533.3 0 506.7 0 480 0C453.3 0 426.7 0 400 0C373.3 0 346.7 0 320 0C293.3 0 266.7 0 240 0C213.3 0 186.7 0 160 0C133.3 0 106.7 0 80 0C53.3 0 26.7 0 13.3 0L0 0Z"
@@ -470,7 +426,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                     fill="#d62828"></path>
             </g>
         </svg>
-
         <script>
             const tween21 = KUTE.fromTo(
                 "#wave511",
@@ -510,7 +465,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 { repeat: 999, duration: 10000, yoyo: true }
             ).start();
         </script>
-
     </div>
 
     <section>
@@ -539,7 +493,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                     d="M0 92L13.3 90.3C26.7 88.7 53.3 85.3 80 82.8C106.7 80.3 133.3 78.7 160 77.7C186.7 76.7 213.3 76.3 240 76.7C266.7 77 293.3 78 320 80.8C346.7 83.7 373.3 88.3 400 89C426.7 89.7 453.3 86.3 480 85.5C506.7 84.7 533.3 86.3 560 86.5C586.7 86.7 613.3 85.3 640 84.2C666.7 83 693.3 82 720 82.2C746.7 82.3 773.3 83.7 800 82.2C826.7 80.7 853.3 76.3 880 75.5C906.7 74.7 933.3 77.3 946.7 78.7L960 80L960 101L946.7 101C933.3 101 906.7 101 880 101C853.3 101 826.7 101 800 101C773.3 101 746.7 101 720 101C693.3 101 666.7 101 640 101C613.3 101 586.7 101 560 101C533.3 101 506.7 101 480 101C453.3 101 426.7 101 400 101C373.3 101 346.7 101 320 101C293.3 101 266.7 101 240 101C213.3 101 186.7 101 160 101C133.3 101 106.7 101 80 101C53.3 101 26.7 101 13.3 101L0 101Z"
                     fill="#defffc"></path>
             </g>
-
             <g style="visibility: hidden;">
                 <path id="wave621"
                     d="M0 38L13.3 36.3C26.7 34.7 53.3 31.3 80 26.5C106.7 21.7 133.3 15.3 160 15.8C186.7 16.3 213.3 23.7 240 26.8C266.7 30 293.3 29 320 28.5C346.7 28 373.3 28 400 29C426.7 30 453.3 32 480 32.3C506.7 32.7 533.3 31.3 560 29C586.7 26.7 613.3 23.3 640 25.7C666.7 28 693.3 36 720 34.8C746.7 33.7 773.3 23.3 800 19.2C826.7 15 853.3 17 880 19.8C906.7 22.7 933.3 26.3 946.7 28.2L960 30L960 101L946.7 101C933.3 101 906.7 101 880 101C853.3 101 826.7 101 800 101C773.3 101 746.7 101 720 101C693.3 101 666.7 101 640 101C613.3 101 586.7 101 560 101C533.3 101 506.7 101 480 101C453.3 101 426.7 101 400 101C373.3 101 346.7 101 320 101C293.3 101 266.7 101 240 101C213.3 101 186.7 101 160 101C133.3 101 106.7 101 80 101C53.3 101 26.7 101 13.3 101L0 101Z"
@@ -558,7 +511,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                     fill="#defffc"></path>
             </g>
         </svg>
-
         <script>
             const tween26 = KUTE.fromTo(
                 "#wave611",
@@ -598,7 +550,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                 { repeat: 999, duration: 10000, yoyo: true }
             ).start();
         </script>
-
     </div>
 
     <section class="mint-green">
@@ -645,7 +596,6 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
                     fill="#defffc"></path>
             </g>
         </svg>
-
         <script>
             const tween31 = KUTE.fromTo(
                 "#wave711",
@@ -693,7 +643,7 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
             beatae rem doloribus. Quis tempore cupiditate libero atque commodi ducimus neque illo sint debitis aliquid.
         </p>
     </section> -->
-
+    <script src="script.js"></script>
 </body>
 
 </html>
