--- a/Websites/Curvaceous Homepage/index.html
+++ b/Websites/Curvaceous Homepage/index.html
@@ -20,7 +20,7 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
 
     <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script>https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
 
 </head>
 
@@ -31,14 +31,14 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
         <nav class="navbar">
             <span class="top"></span>
             <span class="bottom"></span>
-            <div class="logo">julian pietracz.</div>
+            <div class="logo"><a href="#home">julian pietracz.</a></div>
             <ul class="menu">
                 <li><a href="#home">home</a></li>
                 <li><a href="#about">about</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="#contact">contact</a></li>
             </ul>
             <div class="instagram">
-                <a href="#">instagram</a>
+                <a href="#instagram">instagram</a>
             </div>
         </nav>
     </header>
