commited everything new

--- a/Websites/Curvaceous Homepage/index.html
+++ b/Websites/Curvaceous Homepage/index.html
@@ -560,7 +560,7 @@ With npx serve(Node.js) used in the terminal you can create a localhost where yo
             blanditiis commodi ullam?</p>
     </section>
 
-    <!-- <div class="bottom-overlap">
+    <div class="bottom-overlap">
         <svg transform=scale(1.1) height: 960 width: 100% viewBox="0 0 960 100">
             <g>
                 <path id="wave711"
